Fixed script links Added more homepage content Mobile view is too squished and needs to be redesigned

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* TODO LIST
 --------------
-- Import Google Font to use for sidenav
-- Javascript link 
+- Find sliding login plugin or create from scratch
+- Fix mobile view (hide sidebar?)
 
 */
 
@@ -9,6 +9,11 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 @import "~roboto-fontface/css/roboto/roboto-fontface.css";
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display');
+
+/* ---------------------------------------------------
+    GENERAL STYLE
+----------------------------------------------------- */
 
 :root {
     --sidebar-background: #284777;
@@ -56,7 +61,7 @@ a, a:hover, a:focus {
     margin: 40px 0;
 }
 
-i, span {
+i, span, a {
     display: inline-block;
     font-family: 'Roboto', sans-serif;
 }
@@ -68,8 +73,38 @@ i, span {
 }
 
 .fa {
-    font-size: 1em;
+    font-size: 1.05em;
+    padding: 5px;
 }
+
+.row {
+    margin: 0 auto;
+}
+
+.panel-home {
+    background-color: white;
+    margin: 5px auto;
+    padding: 20px;
+}
+
+.has-search .form-control {
+    padding-left: 2rem;
+  }
+  
+  .has-search .form-control-feedback {
+    position: absolute;
+    display: block;
+    width: 2rem;
+    height: 2rem;
+    line-height: 1.7rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+  }
+
+  #top-nav {
+    padding: 2px;
+  }
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -133,6 +168,7 @@ i, span {
 }
 
 #sidebar .sidebar-header {
+    font-family: 'Major Mono Display', monospace;
     text-align: center;
     padding-top: 20px;
     background: var(--sidebar-background);
